test/corpus/statements.txt
=======
Simple SELECT query
=======

SELECT co1, "col1", 1, test();

---

(source_file
  (select_statement
    (select_list
      (select_list_item
        (expression
          (column_reference)))
      (select_list_item
        (expression
          (string_literal)))
      (select_list_item
        (expression
          (number_literal)))
      (select_list_item
        (expression
          (function_call))))))

=======
SELECT case statement
=======

SELECT case when 1 then 2 else 3 end;

---

(source_file
  (select_statement
    (select_list
      (select_list_item
        (expression
          (case_expression
            (when_clause
              (expression
                (number_literal))
              (expression
                (number_literal)))
            (else_clause
              (expression
                (number_literal)))))))))

=======
Simple SELECT query with alias
=======

SELECT co1 AS "col1", col2 "col2";

---

(source_file
  (select_statement
    (select_list
      (select_list_item
        (expression
          (column_reference))
        (alias))
      (select_list_item
        (expression
          (column_reference))
        (alias)))))
